--- a/src/components/Summary/Summary.module.css
+++ b/src/components/Summary/Summary.module.css
@@ -5,7 +5,18 @@
   grid-template-columns: 1fr auto;
   grid-template-areas:
     'title location'
-    'duration location';
+    'duration duration';
+  align-items: center;
+}
+
+@container (width < 1024px) {
+  .root {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      'title'
+      'duration'
+      'location';
+  }
 }
 
 .title {
