--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,11 @@ body {
   min-height: 100vh;
 }
 
+.text--smaller {
+  font-size: 0.875rem;
+  line-height: 1.2;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #000000;
