--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -4,12 +4,15 @@
   min-height: 100vh;
   overflow: hidden;
   grid-template-columns: 18rem 1fr;
+  grid-template-rows: auto;
+  grid-auto-rows: 1fr;
   grid-template-areas:
     "head head"
     "left right";
 
   @media only screen and (max-width: 1024px) {
     grid-template-columns: 1fr;
+    grid-auto-rows: auto;
     grid-template-areas:
       "head"
       "right"
@@ -19,7 +22,7 @@
 
 .head {
   grid-area: head;
-  padding: 1rem;
+  padding: 0 1rem;
   border-bottom: 1px solid rgba(255, 255, 255, .1);
 
   @media (prefers-color-scheme: light) {
@@ -29,7 +32,7 @@
 
 .left {
   grid-area: left;
-  padding: 1rem;
+  padding: 0 1rem;
   border-right: 1px solid rgba(255, 255, 255, .1);
 
   @media (prefers-color-scheme: light) {
@@ -41,7 +44,7 @@
 
 .right {
   grid-area: right;
-  padding: 1rem;
+  padding: 0 1rem;
 }
 
 .right>*:not(:first-child) {
