fix ui/update data/add moment

--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -28,6 +28,18 @@
   @media (prefers-color-scheme: light) {
     border-color: rgba(0, 0, 0, .1);
   }
+
+  @media only screen and (max-width: 1024px) {
+    border: none;
+  }
+}
+
+.head h1 {
+  margin-bottom: 0.5rem;
+}
+
+.head h2 {
+  margin-top: 0.5rem;
 }
 
 .left {
@@ -39,21 +51,36 @@
     border-color: rgba(0, 0, 0, .1);
   }
 
+  @media only screen and (max-width: 1024px) {
+    display: flex;
+    flex-direction: column-reverse;
+    border: none;
+  }
+
   container-type: inline-size;
 }
 
 .right {
   grid-area: right;
   padding: 0 1rem;
+
+  @media only screen and (max-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-.right>*:not(:first-child) {
+/* .right>*:not(:first-child) {
   border-top: 1px solid rgba(255, 255, 255, .1);
 
   @media (prefers-color-scheme: light) {
     border-color: rgba(0, 0, 0, .1);
   }
-}
+
+  @media only screen and (max-width: 1024px) {
+    border: none;
+  }
+} */
 
 .skills {
   display: flex;
@@ -71,5 +98,5 @@
 }
 
 .listUnstyled>li {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.75rem;
 }
