--- a/src/components/Employment/Employment.module.css
+++ b/src/components/Employment/Employment.module.css
@@ -1,1 +1,14 @@
-.root {}
+.root {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.pills {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0;
+}
