--- a/src/index.css
+++ b/src/index.css
@@ -30,14 +30,15 @@ body {
   min-height: 100vh;
 }
 
-.text--smaller {
-  font-size: 0.8125rem;
-  line-height: 1.2;
-}
-
 @media (prefers-color-scheme: light) {
   :root {
     color: #000000;
     background-color: #ffffff;
+  }
+}
+
+@media print {
+  html {
+    font-size: 11.5px;
   }
 }
