--- a/src/components/Pill/Pill.module.css
+++ b/src/components/Pill/Pill.module.css
@@ -13,4 +13,8 @@
   @media (prefers-color-scheme: light) {
     background-color: rgba(0, 0, 0, .1);
   }
+
+  @media print {
+    border: 1px solid #000000;
+  }
 }
