--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,11 @@ body {
 
 @media print {
   html {
-    font-size: 11.5px;
+    font-size: 11.25px;
+  }
+
+  a,
+  a:visited {
+    color: #000000;
   }
 }
