--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -3,6 +3,10 @@
   margin: 1.25rem 0;
   text-transform: uppercase;
   font-weight: 400;
+
+  @media print {
+    border-bottom: 1px solid #000000;
+  }
 }
 
 .title::before {
@@ -17,5 +21,9 @@
 
   @media (prefers-color-scheme: light) {
     background-color: #000000;
+  }
+
+  @media print {
+    display: none;
   }
 }
