--- a/src/components/Pill/Pill.module.css
+++ b/src/components/Pill/Pill.module.css
@@ -1,7 +1,5 @@
 .root {
   list-style-type: none;
-  /* display: inline-flex; */
-  /* flex-wrap: no-wrap; */
   margin: 0;
   padding: 0.5rem 1rem;
   background-color: rgba(255, 255, 255, .1);
@@ -9,12 +7,16 @@
   font-weight: 600;
   font-size: 0.75rem;
   line-height: 1;
+}
 
-  @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
+  .root {
     background-color: rgba(0, 0, 0, .1);
   }
+}
 
-  @media print {
-    border: 1px solid #000000;
+@media print {
+  .root {
+    border: 1px solid rgba(0, 0, 0, .1);
   }
 }
