--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -3,10 +3,6 @@
   margin: 1.25rem 0;
   text-transform: uppercase;
   font-weight: 400;
-
-  @media print {
-    border-bottom: 1px solid #000000;
-  }
 }
 
 .title::before {
@@ -18,12 +14,20 @@
   width: 3.5rem;
   height: 0.25rem;
   background-color: #ffffff;
+}
 
-  @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
+  .title::before {
     background-color: #000000;
   }
+}
 
-  @media print {
-    display: none;
+@media print {
+  .title {
+    border-bottom: 1px solid #000000;
+  }
+
+  .title::before {
+    content: none;
   }
 }
