--- a/src/components/Summary/Summary.module.css
+++ b/src/components/Summary/Summary.module.css
@@ -28,8 +28,10 @@
   font-size: 0.875rem;
   line-height: 1rem;
   color: rgba(255, 255, 255, .5);
+}
 
-  @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
+  .location {
     color: rgba(0, 0, 0, .5);
   }
 }
