--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -1,4 +1,6 @@
 .root {
+  --border-color: rgba(var(--primary-color), .1);
+
   display: grid;
   width: 100%;
   min-height: 100vh;
@@ -9,38 +11,22 @@
   grid-template-areas:
     "head head"
     "left right";
-
-  @media only screen and (max-width: 1024px) {
-    grid-template-columns: 1fr;
-    grid-auto-rows: auto;
-    grid-template-areas:
-      "head"
-      "right"
-      "left";
-  }
 }
 
 .head {
   grid-area: head;
   padding: 0 1rem;
-  border-bottom: 1px solid rgba(255, 255, 255, .1);
-
-  @media (prefers-color-scheme: light) {
-    border-color: rgba(0, 0, 0, .1);
-  }
-
-  @media only screen and (max-width: 1024px) {
-    border: none;
-  }
-
-  @media print {
-    border: none;
-  }
-
+  border-bottom: 1px solid var(--border-color);
   display: grid;
   grid-template-columns: 1fr auto;
   grid-template-areas: 'title qrCode'
-  'subtitle qrCode';
+    'subtitle qrCode';
+}
+
+@media print {
+  .head {
+    border: none;
+  }
 }
 
 .head h1 {
@@ -52,6 +38,76 @@
   grid-area: subtitle;
   margin-top: 0.5rem;
 }
+
+.left {
+  grid-area: left;
+  padding: 0 1rem;
+  border-right: 1px solid var(--border-color);
+  container-type: inline-size;
+}
+
+@media print {
+  .left {
+    border: none;
+  }
+}
+
+.right {
+  grid-area: right;
+  padding: 0 1rem;
+}
+
+
+/* Mobile layout */
+
+@media only screen and (max-width: 1024px) {
+  .root {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .left,
+  .right {
+    display: contents;
+    border: none;
+  }
+
+  .left>*,
+  .right>* {
+    padding: 0 1rem;
+  }
+
+  .head {
+    border: none;
+    order: 1;
+  }
+
+  .contact {
+    order: 2;
+  }
+
+  .skills {
+    order: 4
+  }
+
+  .languages {
+    order: 7;
+  }
+
+  .education {
+    order: 6;
+  }
+
+  .profile {
+    order: 3;
+  }
+
+  .employment {
+    order: 5;
+  }
+}
+
+/* QR code */
 
 .qrCode {
   grid-area: qrCode;
@@ -76,46 +132,16 @@
   border: 1rem solid #fff;
 }
 
-.left {
-  grid-area: left;
-  padding: 0 1rem;
-  border-right: 1px solid rgba(255, 255, 255, .1);
-  container-type: inline-size;
-}
-
-@media only screen and (max-width: 1024px) {
-  .left {
-    display: flex;
-    flex-direction: column-reverse;
-    border: none;
-  }
-}
-
 @media (prefers-color-scheme: light) {
-  .left {
-    border-color: rgba(0, 0, 0, .1);
+  .qrCode>* {
+    border-color: transparent;
   }
 }
 
-@media print {
-  .left {
-    border: none;
-  }
-}
 
-.right {
-  grid-area: right;
-  padding: 0 1rem;
-}
+/* Skills */
 
-@media only screen and (max-width: 1024px) {
-  .right {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-.skills {
+.skillsList {
   display: flex;
   flex-wrap: wrap;
   justify-content: left;
@@ -123,6 +149,9 @@
   gap: 0.5rem;
   padding: 0;
 }
+
+
+/* Shared */
 
 .listUnstyled {
   margin: 0;
