--- a/src/components/Summary/Summary.module.css
+++ b/src/components/Summary/Summary.module.css
@@ -27,13 +27,7 @@
   grid-area: location;
   font-size: 0.875rem;
   line-height: 1rem;
-  color: rgba(255, 255, 255, .5);
-}
-
-@media (prefers-color-scheme: light) {
-  .location {
-    color: rgba(0, 0, 0, .5);
-  }
+  color: rgba(var(--primary-color), .5);
 }
 
 .duration {
