--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
 :root {
+  --primary-color: 239, 239, 239;
+  --scene-color: 36, 36, 36;
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(var(--primary-color), 0.87);
+  background-color: rgba(var(--scene-color), 1);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,18 +35,23 @@ body {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #000000;
-    background-color: #ffffff;
+    --primary-color: 36, 36, 36;
+    --scene-color: 239, 239, 239;
   }
 }
 
 @media print {
+  :root {
+    --primary-color: 0, 0, 0;
+    --scene-color: 255, 255, 255;
+  }
+
   html {
     font-size: 11.25px;
   }
 
   a,
   a:visited {
-    color: #000000;
+    color: rgba(var(--primary-color), 1);
   }
 }
