--- a/src/components/Employment/Employment.module.css
+++ b/src/components/Employment/Employment.module.css
@@ -12,3 +12,12 @@
   gap: 0.5rem;
   padding: 0;
 }
+
+.list {
+  padding-left: 0.5rem;
+}
+
+.listItem {
+  list-style-type: '•';
+  padding: 0 0 0 0.5rem;
+}
