--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -112,6 +112,7 @@
   }
 }
 
+
 /* QR code */
 
 .qrCode {
@@ -151,7 +152,7 @@
   flex-wrap: wrap;
   justify-content: left;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.75rem 0.5rem;
   padding: 0;
 }
 
