--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -19,8 +19,6 @@
   border-bottom: 1px solid var(--border-color);
   display: grid;
   grid-template-columns: 1fr auto;
-  grid-template-areas: 'title qrCode'
-    'subtitle qrCode';
 }
 
 @media print {
@@ -30,12 +28,10 @@
 }
 
 .head h1 {
-  grid-area: title;
   margin-bottom: 0.5rem;
 }
 
 .head h2 {
-  grid-area: subtitle;
   margin-top: 0.5rem;
 }
 
@@ -57,6 +53,17 @@
   padding: 0 1rem;
 }
 
+.qrArea {
+  margin-right: -1rem;
+  border: 1rem solid #fff;
+}
+
+@media (prefers-color-scheme: light) {
+  .qrArea {
+    border-color: transparent;
+  }
+}
+
 
 /* Mobile layout */
 
@@ -65,6 +72,13 @@
     display: flex;
     flex-direction: column;
     container-type: inline-size;
+    padding: 0 1rem 1rem;
+  }
+
+  .head {
+    display: contents;
+    border: none;
+    order: 1;
   }
 
   .left,
@@ -73,18 +87,8 @@
     border: none;
   }
 
-  .left>*,
-  .right>* {
-    padding: 0 1rem;
-  }
-
   .left {
     container-type: initial;
-  }
-
-  .head {
-    border: none;
-    order: 1;
   }
 
   .contact {
@@ -110,37 +114,11 @@
   .employment {
     order: 5;
   }
-}
 
-
-/* QR code */
-
-.qrCode {
-  grid-area: qrCode;
-  position: relative;
-  height: 100%;
-  aspect-ratio: 1 / 1;
-}
-
-@media only screen and (max-width: 1024px) {
-  .qrCode {
-    display: none;
-  }
-}
-
-.qrCode>* {
-  position: absolute;
-  top: 50%;
-  right: -1rem;
-  transform: translate(0, -50%);
-  max-width: calc(100% - 1rem * 2);
-  max-height: calc(100% - 1rem * 2);
-  border: 1rem solid #fff;
-}
-
-@media (prefers-color-scheme: light) {
-  .qrCode>* {
-    border-color: transparent;
+  .qrArea {
+    order: 8;
+    margin: 2rem auto;
+    width: 10rem;
   }
 }
 
