--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 a {
   font-weight: 600;
   opacity: 0.9;
